# Raft-Consensus

./: .gitignore  Cargo.toml  README.md  cargo-error.txt  err.txt  package.json  vercel.json
crates/raft-core/: Cargo.toml
crates/raft-core/src/: lib.rs  log.rs  message.rs  node.rs
crates/raft-core/tests/: comprehensive_tests.rs
crates/raft-storage/: Cargo.toml
crates/raft-storage/src/: lib.rs
crates/raft-storage/tests/: comprehensive_tests.rs
crates/raft-wasm/: Cargo.toml
crates/raft-wasm/src/: bindings.rs  lib.rs
dashboard/: Cargo.toml  Trunk.toml  index.html  styles.css
dashboard/src/: lib.rs
docs/: ARCHITECTURE.md  HARDWARE_SETUP.md  RAFT_SPEC.md  WASI_MAPPING.md
shim/: filesystem.js  host.js  network.js
shim/wasm/: raft.js
shim/wasm/interfaces/: raft-consensus-raft-api.d.ts
wit/: raft.wit
