[workspace]
resolver = "2"
members = [
    "crates/raft-core",
    "crates/raft-storage",
    "crates/raft-wasm",
    "dashboard",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Portfolio Project"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
