[package]
name = "raft-wasm"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
raft-core = { path = "../raft-core" }
raft-storage = { path = "../raft-storage" }
wit-bindgen = "0.36"
wit-bindgen-rt = "0.36"

[package.metadata.component]
package = "raft:consensus"
target = { path = "../../wit" }

[package.metadata.component.dependencies]
